# Modern_CMake_Cpp

./: .gitignore  Readme.md
chapter01/01_Hello/: CMakeLists.txt
chapter01/02-presets/: CMakePresets.json
chapter01/03-script/: Hello.txt  script.cmake
chapter02/01_auguments/: bracket.cmake  quoted.cmake  unquoted.cmake
chapter02/02_variables/: set.cmake
chapter02/03_environment/: CMakeLists.txt
chapter02/04_scope/: CMakeLists.txt
chapter02/05_list/: list.cmake
chapter02/06_control/: control.cmake  foreach.cmake
chapter02/08_definitions/: function.cmake  macro.cmake
chapter02/09_procedual/: main.cmake
chapter02/10-useful/: include.cmake  message_context.cmake  message_error.cmake
chapter03/01_partation/: CMakeLists.txt  main.cpp
chapter03/02_include/: CMakeLists.txt
chapter03/02_include/cars/: cars.cmake
chapter03/03_add_subdirectory/: CMakeLists.txt  main.cpp
chapter03/03_add_subdirectory/cars/: CMakeLists.txt  car.cpp
chapter03/04_subprojects/cars/: CMakeLists.txt  car.h
chapter03/05_structure/: CMakeLists.txt
chapter03/05_structure/src/: CMakeLists.txt
chapter03/05_structure/src/app1/: CMakeLists.txt  app1.cpp
chapter03/05_structure/src/app2/: CMakeLists.txt  app2.cpp
chapter03/06_chaintools/envs/: CMakeLists.txt
chapter03/06_chaintools/toolchain/: CMakeLists.txt  main.cpp
chapter03/07_features/: CMakeLists.txt
chapter03/08_test_run/: CMakeLists.txt  main.cpp
chapter03/09_in_source/: CMakeLists.txt
chapter04/01_targets/: CMakeLists.txt  calculations.cpp  drawing.cpp  drawing.h  gui_app.cpp  terminal_app.cpp  test.dot  test.dot.calculations.dependers  test.dot.drawing.dependers  test.dot.gui_app  test.dot.terminal_app
chapter04/02_propagated/: CMakeLists.txt
chapter05/01_sources/: CMakeLists.txt  gui_linux.cpp  gui_windows.cpp  main.cpp
chapter05/02_definitions/: CMakeLists.txt  definitions.cpp
chapter05/03_git/: CMakeLists.txt  print_commit.cpp
chapter05/04_configure/: CMakeLists.txt  configure.h.in  main.cpp
chapter05/06_precompile/: CMakeLists.txt  main.cpp
chapter05/07_debug/: CMakeLists.txt
chapter06/01_libraries/: CMakeLists.txt  function_a.cpp  function_b.cpp
chapter06/02_odr_fail/: one.cpp
chapter06/03_odr_success/: one.cpp  shared.h
chapter06/04_odr_success/: CMakeLists.txt  shared.h
chapter06/05_dynamic/: CMakeLists.txt  a.cpp  b.cpp  main.cpp
chapter06/06_unresolved/: CMakeLists.txt  main.cpp  nested.cpp  outer.cpp
chapter06/07_testing/: CMakeLists.txt  main.cpp  program.cpp  test.cpp
(+9 files in other folders)
